# rust-graphql

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
migrations/2022-07-12-130055_create_members/: down.sql  up.sql
src/: db.rs  graphql_schema.rs  graphql_schema.rs.bak  handlers.rs  main.rs
src/schemas/: member.rs  mod.rs  team.rs
