[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web-lab = "0.16.0"
actix-web = "4.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4.0"
futures = "0.3.21"
juniper = "0.15.9"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"